# cpp_project_bootstrapper

./: .gitignore  CMakeLists.txt  README.md  gold.cfg
goldpkg/: README.md  gold  gold.cfg  install.sh  setup.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  assertTrue.cpp
